Fix contrast issues

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -8,7 +8,7 @@ $bg_bg_pj1: #113855
 $bg_pj2: #EC5242
 $bg_bg_pj2: #291B19
 
-$bg_pj3: #0481C9
+$bg_pj3: #3097d3
 $bg_bg_pj3: #0F1010
 
 $bg_pj4: #ED4631
@@ -227,7 +227,8 @@ body
         color: $my_green
     .my-school
       display: inline-block
-      color: $bg_pj1
+      color: $bg_bg_pj1
+      font-weight: 500
       &:hover
         border-radius: 2px
         animation-name: hover_my-school
@@ -235,7 +236,8 @@ body
         animation-fill-mode: forwards
     .my-university
       display: inline-block
-      color: $bg_pj1
+      color: $bg_bg_pj1
+      font-weight: 500
       &:hover
         border-radius: 2px
         animation-name: hover_my-university
@@ -260,7 +262,7 @@ body
             animation-fill-mode: forwards
     .social-media-links
       a
-        color: $bg_pj1
+        color: $bg_bg_pj1
       .link-cv
         &:hover
           animation-name: hover_cv
@@ -283,7 +285,7 @@ body
           animation-fill-mode: forwards
     .say-hello-wrapper
       .say-hello
-        background-color: $bg_pj1
+        background-color: $bg_bg_pj1
         color: white
         height: auto
         &:hover
@@ -349,8 +351,8 @@ body
   .skills
     .skill
       color: white
-      background-color: $bg_pj1
-      font-weight: 300
+      background-color: $bg_bg_pj1
+      font-weight: 400
       text-transform: uppercase
     .title
       text-transform: uppercase
@@ -406,6 +408,7 @@ body
     .project-spesific-skills
       font-size: 1.1em
       .badge
+        font-weight: 400
         color: white
       div
         text-transform: uppercase
